--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./icons8-женщина-пользователь-100.ico">
 </head>
 <body>
-    <div class="container">
+    /*<div class="container">
         <div class="contact-inform">
             <div class="main-photo">
                 <div class="fhoto"></div>
@@ -124,6 +124,6 @@
                 </div>
             </div>
         </footer>
-    </div>
+    </div>*/
 </body>
 </html>
